ghost_deploy/ghostapp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ghost-deployment
spec:
  selector:
    matchLabels:
      app: ghost
  replicas: 2 # tells deployment to run 2 pods matching the template
  template:
    metadata:
      labels:
        app: ghost
    spec:
      containers:
      - name: ghost
        image: ghost:alpine
        ports:
        - containerPort: 2368
