ghost_deploy/ghost-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ghost-service
spec:
  type: NodePort
  selector:
    app: ghost
  ports:
      # By default and for convenience, the `targetPort` is set to the same value as the `port` field.
    - port: 2368
      targetPort: 2368
      # Optional field
      # By default and for convenience, the Kubernetes control plane will allocate a port from a range (default: 30000-32767)
      nodePort: 30007
